--- a/HTMLCSSJSPrimer/flexbox/style.css
+++ b/HTMLCSSJSPrimer/flexbox/style.css
@@ -34,6 +34,7 @@ h1 {
 
 .upper_body {
     height: 150px;
+    /* le seguenti 4 properties sono di Flexbox*/
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
